@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2001-2002 The Apache Software Foundation.  All rights
+ * Copyright (c) 2001-2003 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -53,7 +53,6 @@
  */
 package org.apache.tools.ant.taskdefs;
 
-import java.io.File;
 import org.apache.tools.ant.BuildFileTest;
 import org.apache.tools.ant.util.FileUtils;
 
@@ -117,8 +116,15 @@ public class UntarTest extends BuildFileTest {
                                            project.resolveFile("asf-logo.gif")));
     }
 
-    public void testSrcDirTest() throws java.io.IOException {
-        FileUtils fileUtils = FileUtils.newFileUtils();
+    public void testSrcDirTest() {
         expectBuildException("srcDirTest", "Src cannot be a directory.");
     }
+
+    public void testEncoding() {
+        expectSpecificBuildException("encoding", 
+                                     "<untar> overrides setEncoding.",
+                                     "The untar task doesn't support the "
+                                     + "encoding attribute");
+    }
+
 }
