@@ -453,6 +453,10 @@ Other changes:
 * FileUtils#createTempFile will now create temporary files in the 
   directory pointed to by the property java.io.tmpdir
 
+* <unzip> and friends now supports an optional encoding attribute to
+  enable it to expand archives created with filenames using an encoding
+  other than UTF8.  Bugzilla Report 10504.
+
 Changes from Ant 1.5.2 to Ant 1.5.3
 ===================================
 
